--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.json"
+              "src/manifest.json",
+              "src/_redirects"
             ]
           }
         },
