--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "~7.0.0",
     "@tensorflow/tfjs": "^0.13.5",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
