--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@angular/service-worker": "~7.0.0",
-    "@tensorflow/tfjs": "^0.13.5",
+    "@tensorflow/tfjs": "^0.14.0",
     "core-js": "^2.5.4",
+    "crypt-js": "^1.0.4",
     "crypto": "^1.0.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
